# poetry_version_critical

./: README.md  autotest_config.json  pyproject.toml
