[tool.poetry]
name = "poetry-version-critical"
version = "0.1.0"
description = "Critical test: Dependencies REQUIRE Python 3.10+ - wrong version = installation failure"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
# python = "^3.8"
# CRITICAL: These packages require Python >=3.10
# If tool detects wrong Python version, installation WILL FAIL
numpy = ">=1.26.0"  # Requires Python >=3.9 (for 1.26+)
pandas = ">=2.1.0"   # Requires Python >=3.9 (for 2.1+)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
